[package]
name = "sort-keys"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Recursively sort the keys of a JSON object, for deterministic output. A faithful port of the sort-keys npm package."
documentation = "https://docs.rs/sort-keys"
repository = "https://github.com/trananhtung/sort-keys"
homepage = "https://github.com/trananhtung/sort-keys"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["sort", "keys", "object", "json", "deterministic"]
categories = ["text-processing", "value-formatting"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
